--- a/Project 3(Group Project).Rmd
+++ b/Project 3(Group Project).Rmd
@@ -28,7 +28,7 @@ knitr::opts_chunk$set(echo = TRUE)
 
 
 
-# Introduction: This is a group project of team A1. We are four members Mohammad Zahid Chowdhury, Stefan Huber, Tyler Graham and Daniel DeBonis in this group. 
+# Introduction: This is a group project of team A1. We are four members including Mohammad Zahid Chowdhury, Stefan Huber, Tyler Graham and Daniel DeBonis in this group. 
 
 
 # Effective Collaboration tools: In the data science field, for communication and documentation purposes we have maintained the following tools. 
